test/error/sema/enum-type-coercion.dsk
let S = enum
    A
    B
end

let x: S = 42

echo(x)
